Compare porcelain output